# TAHBOO_HumanAnimation

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  bodyParts.cpp  bodyParts.h  compile.bat  compile.sh  conf.json  config.json  for_windows.h  generate.bat  humanAnimation.cpp  humanAnimation.h
DTrack_src/include/: DTrackDataTypes.h  DTrackNet.h  DTrackParse.hpp  DTrackParser.hpp  DTrackSDK.hpp
DTrack_src/src/: DTrackNet.cpp  DTrackParse.cpp  DTrackParser.cpp  DTrackSDK.cpp
Tests/: mainTests.cpp
